# cwq-public-yolov8

./: .gitignore  README.md  config.json
admin/: .gitignore  Admin.sqlite3  README.md  manage.py  requirements.txt
admin/app/: middleware.py  models.py  urls.py
admin/app/utils/: Analyzer.py  Common.py  Config.py  DjangoSql.py  OSInfo.py  Utils.py  ZLMediaKit.py
admin/app/views/: AlarmView.py  Algorithm.py  ControlView.py  StreamView.py  ViewsBase.py  api.py  web.py
admin/framework/: asgi.py  settings.py  urls.py  wsgi.py
admin/static/lib/: jquery-toast.html
admin/templates/app/: base_site.html  footer.html  message.html  sidebar.html  top_navigation.html  web_alarms.html  web_algorithms.html  web_index.html  web_login.html  web_profile.html
analyzer/: .gitignore  Analyzer.sln  CMakeLists.txt  README.md
analyzer/Analyzer/: Analyzer.vcxproj  Analyzer.vcxproj.filters  main.cpp
analyzer/Analyzer/Core/: Algorithm.cpp  Algorithm.h  AlgorithmOnnxRuntime.cpp  AlgorithmOnnxRuntime.h  Analyzer.cpp  Analyzer.h  AvPullStream.cpp  AvPullStream.h  AvPushStream.cpp  AvPushStream.h  Config.cpp  Config.h  Control.h  Frame.cpp  Frame.h  GenerateAlarmVideo.cpp  GenerateAlarmVideo.h  Scheduler.cpp  Scheduler.h  Server.cpp  Server.h  Worker.cpp  Worker.h
analyzer/Analyzer/Core/Utils/: Base64.h  CalcuIOU.cpp  CalcuIOU.h  Common.h  Log.h  Request.cpp  Request.h  Version.h
demo/: ffmpeg文件推流模拟摄像头.md  test.mp4.bat
mediaServer/: config.ini
yolo/: .gitignore  README.md  main.py  requirements.txt  tests.py
yolo/controllers/: BaseHandler.py  DetectHandler.py  IndexHandler.py
(+11 files in other folders)
